...
            <objects>
                <windowController storyboardIdentifier="PreferencesWindowController" showSeguePresentationStyle="single" id="cvb-5t-gwj" sceneMemberID="viewController">
                    <window key="window" identifier="PreferencesWindow" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" tabbingIdentifier="PreferencesWindow" id="c7f-Sf-TxX">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
...
        <scene sceneID="2DB-Ov-PlU">
            <objects>
                <viewController title="Performance" id="THJ-5G-T9t" customClass="PrefTabPerformance" customModule="ResticGUI" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="9St-Op-6ZX">
                        <rect key="frame" x="0.0" y="0.0" width="550" height="252"/>
...
                                            <rect key="frame" x="123" y="78" width="387" height="134"/>
                                            <subviews>
                                                <popUpButton identifier="CPU QoS Selector" toolTip="Limit the CPU usage of Restic." verticalHuggingPriority="750" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="jKO-q7-6wX">
                                                    <rect key="frame" x="-3" y="110" width="251" height="25"/>
                                                    <popUpButtonCell key="cell" type="push" title="Default" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="Fx5-K0-Vj3" id="GF3-us-bnZ">
                                                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                                        <font key="font" metaFont="message"/>
...
                                                                <menuItem title="High Priority" identifier="userInitiated" id="Wv2-Kv-HjU"/>
                                                                <menuItem title="Default" state="on" identifier="default" id="Fx5-K0-Vj3"/>
                                                                <menuItem title="Utility" identifier="utility" id="dzR-wH-rBh"/>
                                                                <menuItem title="Background (Efficiency cores only)" identifier="background" id="9SQ-mO-2nb">
                                                                    <modifierMask key="keyEquivalentModifierMask"/>
...
                                                <button identifier="Limit Background Core Count" toolTip="Prevents restic from using more reading threads than you have efficiency cores." verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fxS-fK-zks">
                                                    <rect key="frame" x="-2" y="43" width="370" height="18"/>
                                                    <buttonCell key="cell" type="check" title="Limit read concurrency when running on efficiency cores" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="EgN-i1-z4j">
                                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                        <font key="font" metaFont="system"/>
...
                                                <button identifier="QoS Background on Battery" toolTip="Limit Restic to background QoS while running on battery power." verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="I1Z-Ig-p7A">
                                                    <rect key="frame" x="-2" y="21" width="259" height="18"/>
                                                    <buttonCell key="cell" type="check" title="Always use efficiency cores on battery" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="VgL-Ej-tu6">
                                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                        <font key="font" metaFont="system"/>
...
                                                <button identifier="QoS Background on Low Power" toolTip="Limit Restic to background QoS while Low Power mode is on." verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Hnn-SE-MyE">
                                                    <rect key="frame" x="-2" y="-1" width="319" height="18"/>
                                                    <buttonCell key="cell" type="check" title="Always use efficiency cores on Low Power mode" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="3Ao-TI-di9">
                                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                        <font key="font" metaFont="system"/>
...
