...
                                        <menuItem title="Paste and Match Style" keyEquivalent="v" id="WeT-3V-zwk">
                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" command="YES"/>
                                            <connections>
                                                <action selector="pasteAsPlainText:" target="Ady-hI-5gd" id="cEh-KX-wJQ"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Delete" id="pa3-QI-u2k">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
                                                <action selector="delete:" target="Ady-hI-5gd" id="0Mk-Ml-PaM"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Select All" keyEquivalent="a" id="Ruw-6m-B2m">
...
                                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                                    <prototypeCellViews>
                                                                        <tableCellView identifier="HeaderCell" id="BBQ-Ki-M3q">
                                                                            <rect key="frame" x="11" y="1" width="183" height="17"/>
                                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                            <subviews>
                                                                                <textField identifier="ProfilesHeader" focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="V7M-Yt-1oQ">
                                                                                    <rect key="frame" x="0.0" y="1" width="183" height="14"/>
                                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Profiles" id="ZTI-uR-7rh">
                                                                                        <font key="font" metaFont="smallSystemBold"/>
                                                                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                                    </textFieldCell>
...
                                                </scroller>
                                                <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="EUp-9f-QKr">
                                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                </scroller>
                                            </scrollView>
                                            <button identifier="addProfileButton" toolTip="Add Profile" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ROV-Bb-moK">
                                                <rect key="frame" x="1" y="0.0" width="24" height="26"/>
                                                <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSAddTemplate" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="I5n-bz-Pni">
                                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                    <font key="font" metaFont="system"/>
                                                </buttonCell>
                                                <constraints>
...
                                                    <constraint firstAttribute="height" constant="24" id="Rn8-ia-isM"/>
                                                </constraints>
                                                <connections>
                                                    <segue destination="BkC-YG-4SH" kind="sheet" identifier="NewProfile" destinationCreationSelector="profileSegue:" id="v29-J5-6NS"/>
                                                </connections>
                                            </button>
                                            <button identifier="deleteProfileButton" toolTip="Delete Profile" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6RP-yk-0SW">
                                                <rect key="frame" x="26" y="0.0" width="24" height="26"/>
                                                <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSRemoveTemplate" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="5F9-rO-iBY">
                                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                    <font key="font" metaFont="system"/>
                                                </buttonCell>
                                                <constraints>
...
                                                        <dictionary key="options">
                                                            <integer key="NSNullPlaceholder" value="1"/>
                                                        </dictionary>
                                                    </binding>
                                                </connections>
                                            </button>
                                            <popUpButton identifier="repoPopUpList" horizontalHuggingPriority="100" verticalHuggingPriority="1000" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TN6-dg-ymR">
                                                <rect key="frame" x="90" y="484" width="362" height="26"/>
                                                <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="JeJ-uv-bbN">
                                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                                    <font key="font" metaFont="message"/>
                                                    <menu key="menu" identifier="repoPopUpMenu" id="Fwb-sH-DcC"/>
                                                </popUpButtonCell>
...
