...
            <objects>
                <viewController id="rL6-C0-hqQ" customClass="RepoEditViewController" customModule="ResticGUI" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="11l-Yx-EIL">
                        <rect key="frame" x="0.0" y="0.0" width="480" height="371"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <button identifier="repoSaveEditButton" toolTip="Add the repository to the list of repositories." verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wt5-ld-vgq">
                                <rect key="frame" x="395" y="9" width="76" height="32"/>
                                <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="00U-OH-Hve">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
...
                                    <font key="font" metaFont="cellTitle"/>
                                    <string key="title">Use the Enviorment Table to add repo-specific enviorment variables. This is mostly useful for non-local repos. Use the application's preferences or profile-specific controls to change most settings.</string>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <textField identifier="repoPath" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4fy-Bx-kUc">
                                <rect key="frame" x="54" y="307" width="302" height="21"/>
                                <string key="toolTip">Type in a custom path if you are using a non-local option. Otherwise, select a folder you would like to use for the restic repository.</string>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="yuh-KX-w7H">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <connections>
                                    <outlet property="delegate" destination="rL6-C0-hqQ" id="ZRa-sc-dFl"/>
                                </connections>
                            </textField>
                            <secureTextField identifier="repoPassword" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Q77-nY-6O4">
                                <rect key="frame" x="84" y="279" width="380" height="21"/>
                                <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Required" drawsBackground="YES" usesSingleLineMode="YES" id="uOJ-HK-xnF">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                    <allowedInputSourceLocales>
...
