...
				DispatchQueue.main.async { [self] in
					progressIndicator.stopAnimation(self)
					controlTextDidChange(self)
					STBAlerts.alert(title: "Repository successfully accessed", message: "The repository located at \(repo.path) is accessible.\n\nRepository ID: \(response.id)", style: .informational)
				}
			} catch {
				DispatchQueue.main.async { self.asyncErrorHandler(error, tryingTo: "test") }
			}
		}
	}
	
	func repoFromUI() -> Repo {
		let repo = Repo(path: pathField.stringValue, noKeychain: passwordField.stringValue)
...
